[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://menus/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/GameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/BackgroundOverlay.tscn" type="PackedScene" id=5]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="Container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="Container"]
margin_left = 286.0
margin_top = 145.0
margin_right = 354.0
margin_bottom = 215.0

[node name="PauseMenuLabel" type="Label" parent="Container/Items"]
margin_right = 68.0
margin_bottom = 18.0
text = "PAUSE MENU"
align = 1

[node name="ResumeButton" parent="Container/Items" instance=ExtResource( 4 )]
margin_top = 22.0
margin_right = 68.0
margin_bottom = 44.0
text = "Resume"

[node name="MainMenuButton" parent="Container/Items" instance=ExtResource( 4 )]
margin_top = 48.0
margin_right = 68.0
margin_bottom = 70.0
text = "Main Menu"

[node name="ConfirmationContainer" type="VBoxContainer" parent="Container"]
visible = false
margin_left = 251.0
margin_top = 147.0
margin_right = 388.0
margin_bottom = 212.0

[node name="ConfirmationLabel" type="Label" parent="Container/ConfirmationContainer"]
margin_right = 137.0
margin_bottom = 39.0
text = "Are you sure you want to
go back to the main menu?"
align = 1

[node name="ConfirmationButtons" type="HBoxContainer" parent="Container/ConfirmationContainer"]
margin_top = 43.0
margin_right = 137.0
margin_bottom = 65.0
alignment = 1

[node name="YesButton" parent="Container/ConfirmationContainer/ConfirmationButtons" instance=ExtResource( 4 )]
margin_right = 66.0
size_flags_horizontal = 3
text = "Yes"

[node name="NoButton" parent="Container/ConfirmationContainer/ConfirmationButtons" instance=ExtResource( 4 )]
margin_left = 70.0
margin_right = 137.0
size_flags_horizontal = 3
text = "No"
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Container/Items/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Container/Items/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Container/ConfirmationContainer/ConfirmationButtons/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Container/ConfirmationContainer/ConfirmationButtons/NoButton" to="." method="_on_NoButton_pressed"]
